added smoking component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,11 +28,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown d-flex align-items-center" data-app-modern-menu="true">
                     <li class="nav-item">
-                        <a class="nav-link link text-grey caps display-4" routerLink="/">About us</a>
+                        <a class="nav-link link text-grey caps display-4" routerLink="/" fragment="about-us">About us</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link link text-grey caps display-4" routerLink="/#gallery5-i">
+                    <li class="nav-item"><a class="nav-link link text-grey caps display-4" routerLink="/" fragment="services">
                             Services</a></li>
-                    <li class="nav-item"><a class="nav-link link text-grey caps display-4" routerLink="/#gallery5-i">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link link text-grey caps display-4" routerLink="/" fragment="form2-g">Contact Us</a></li>
                     <li class="nav-item mb-2">
                         <a class="btn btn-small display-4 mr-0" href="javascript:void( window.open( 'https://form.jotform.com/211982448397469', 'blank', 'scrollbars=yes, toolbar=no, width=700, height=500' ) ) ">Request Appointment</a>
                     </li>
@@ -49,15 +49,20 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
                     <strong>Addresses</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style display-7">
-                    AA 10/6, Shastri Bagan <br> 
-                    Desh Bandhu Nagar, Baguiati <br>
-                    Kolkata, West Bengal 700059
-                </p> <br>
-                <p class="mbr-text mbr-fonts-style display-7">
-                    Dash Drone, Newtown, <br> 
-                    Kolkata, West Bengal 700136
-                </p> <br>
+                <a href="https://goo.gl/maps/AKUdDeyeB3Gkqb1WA" target="_blank">
+                    <p class="mbr-text mbr-fonts-style display-7" style="color: #f66840;">
+                        AA 10/6, Shastri Bagan <br> 
+                        Desh Bandhu Nagar, Baguiati <br>
+                        Kolkata, West Bengal 700059
+                    </p>
+                </a> <br>
+                <a href="https://g.page/drsmileclinic?share" target="_blank">
+                    <p class="mbr-text mbr-fonts-style display-7" style="color: #f66840;">
+                        Dash Drone, Newtown, <br> 
+                        Kolkata, West Bengal 700136
+                    </p>
+                </a> <br>
+                
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
@@ -65,7 +70,6 @@
                     doctor@doctorsmilekolkata.com <br>
                     drsahaabir@gmail.com <br>
                     Phone: +91 9674303234<br>
-                    Alternate Phone: +91 9108768794
                 </p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
