--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Lobster&family=Otomanopee+One&family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 .font-custom{
     font-family: 'Pacifico', cursive;
     font-weight: 400;
@@ -55,6 +53,12 @@
     height : 25px;
     border-radius: 10px;
     visibility: hidden;
+}
+.deep-orange{
+    color : #f66840 !important;
+}
+.deep-orange-link:hover{
+    text-decoration: underline !important;
 }
 @media screen and (max-width: 768px) {
     .small-button{
