--- a/src/assets/mobirise/css/mbrtheme.css
+++ b/src/assets/mobirise/css/mbrtheme.css
@@ -14,7 +14,7 @@ body {
   font-weight: 800;
 }
 .text-sub{
-  font-family: 'Poppins',Helvetica,Arial,Lucida,sans-serif;
+  font-family: Lora, Georgia, "Times New Roman", serif !important;
   font-size: 32px;
   line-height: 34px;
   color : #fff !important;
