--- a/src/app/breath/breath.component.css
+++ b/src/app/breath/breath.component.css
@@ -1,6 +1,6 @@
 
 #content6-1{
-    margin-top:80px;
+    margin-top: 80px !important;
 }
 .heading-main{
     font-family:Poppins, Helvetica, Arial, Lucida, sans-serif;
