--- a/src/app/services/services.component.css
+++ b/src/app/services/services.component.css
@@ -1,6 +1,9 @@
 .cid-sDqF7mxvQH{
     background-color: aliceblue;
 }
+#content16-e{
+    color : #000 !important;
+}
 .text-heading{
     color : rgba(0,0,0,0.7);
     font-family: 'Poppins',Helvetica,Arial,Lucida,sans-serif;
@@ -21,4 +24,44 @@
     font-size: 17px;
     line-height: 34px;
     color : rgba(0,0,0,0.7);
+}
+.heading-sub{
+    font-family:Poppins, Helvetica, Arial, Lucida, sans-serif;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 34px;
+    color: rgba(0,0,0,0.82);
+}
+.text-main{
+    font-family:Lora, Georgia, "Times New Roman", serif;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 34px;
+    color: rgba(0,0,0,0.7);
+}
+p{
+    font-family:Lora, Georgia, "Times New Roman", serif;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 34px;
+    color: rgba(0,0,0,0.7);
+}
+.choose-sub-heading{
+    color : rgba(0,0,0,0.7);
+    font-family: 'Poppins',Helvetica,Arial,Lucida,sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 26px;
+}
+@media screen and (max-width: 768px) {
+    #content6-1{
+      margin-top: 50px;
+    }
+}
+.text-point{
+    font-family:Lora, Georgia, "Times New Roman", serif;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 34px;
+    color: rgba(0,0,0,0.7) !important;
 }
