--- a/src/assets/mobirise/css/mbrtheme.css
+++ b/src/assets/mobirise/css/mbrtheme.css
@@ -987,7 +987,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #bed3f9;
+  background-color: #f66840;
 }
 .cid-sCaOWR0CfJ button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1352,12 +1352,12 @@ a {
   background-color: #0a2540;
 }
 .cid-sDqF7mxvQH .display-7{
-  color: #fff;
+  color: rgba(0,0,0,0.82);
 }
 .cid-sDqF7mxvQH .mbr-iconfont {
   font-size: 1.4rem !important;
   font-family: 'Moririse2' !important;
-  color: #b4ceff;
+  color: rgba(0,0,0,0.7);
   margin-left: 1rem;
 }
 .cid-sDqF7mxvQH .panel-group {
@@ -1373,7 +1373,7 @@ a {
   padding: 1rem 0;
 }
 .cid-sDqF7mxvQH .panel-title-edit {
-  color: #ffffff;
+  color: rgba(0,0,0,0.7);
 }
 .cid-sDqF7mxvQH .card .card-header {
   background-color: transparent;
@@ -1382,10 +1382,10 @@ a {
   box-shadow: 0px 0px 19px 0px rgba(57,68,79,1);
 }
 .cid-sDqF7mxvQH H3 {
-  color: #ffffff;
+  color: rgba(0,0,0,0.7);
 }
 .cid-sDqF7mxvQH .panel-text {
-  color: #ffffff;
+  color: rgba(0,0,0,0.7);
 }
 .cid-sDpFzceBzf {
   padding-top: 5rem;
@@ -1416,7 +1416,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-sDqKnl8ZL7 .card {
-    max-width: 12.5%;
+    max-width: 20%;
   }
 }
 .cid-sDqKnl8ZL7 .mbr-section-title {
