--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,3 +1,4 @@
+<div class="temp" id="top"></div>
 <section class="content6 cid-sEwlHHluPT">   
     <div class="container-fluid p-0" id="head">
         <div class="row d-flex justify-content-center mt-3">
@@ -6,50 +7,72 @@
             </div>
         </div>
         <div class="row d-flex justify-content-center my-5">
-            <div class="col-12 col-md-6 col-lg-5 my-2 mx-2 d-flex justify-content-center">
-                <div class="card mb-3 mobile-hide" style="max-width: 540px;">
-                    <div class="row no-gutters">
-                        <div class="col-md-4 d-flex align-items-center">
-                            <img src="../../assets/images/avatar.png" class="card-img-left" alt="Dr. Smile" style="border-radius: 50%;">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Dr. Abir Saha</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Proprietor, Dr. Smile</h6>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card pc-hide" style="width: 18rem;">
-                    <img src="../../assets/images/avatar.png" class="card-img-top mt-2" alt="Dr. Smile" style="border-radius: 50%;">
+            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+                <div class="card pc-hide" style="width: 17rem;">
+                    <img src="../../assets/images/avatar.png" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
-                        <h5 class="card-title heading-sub">Dr. Abir Saha</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Proprietor, Dr. Smile</h6>
+                        <h5 class="card-title">Dr. Abir Saha</h5>
+                        <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Georama',sans-serif;">BDS (WBHUS)</h6>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-5 my-2 mx-2 d-flex justify-content-center">
-                <div class="card mb-3 mobile-hide" style="max-width: 540px;">
-                    <div class="row no-gutters">
-                        <div class="col-md-4 d-flex align-items-center">
-                            <img src="../../assets/images/avatar-girl.png" class="card-img-left" alt="Dr. Smile" style="border-radius: 50%;">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Dr. Namrata Datta</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Intern, Dr. Smile</h6>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card pc-hide" style="width: 18rem;">
-                    <img src="../../assets/images/avatar-girl.png" class="card-img-top mt-2" alt="Dr. Smile" style="border-radius: 50%;">
+            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+                <div class="card pc-hide d-flex justify-content-center" style="width: 17rem;">
+                    <img src="../../assets/images/namrata.jpg" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
                         <h5 class="card-title">Dr. Namrata Datta</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">BDS (MANIPAL)</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+                <div class="card pc-hide" style="width: 17rem;">
+                    <img src="../../assets/images/shubham.jpg" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:210px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Dr. Shubham Banerjee</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Intern, Dr. Smile</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+                <div class="card pc-hide" style="width: 17rem;">
+                    <img src="../../assets/images/avatar.png" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Dr. Budhaditya De</h5>
+                        <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Georama',sans-serif;">BDS (WBHUS)</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+                <div class="card pc-hide" style="width: 17rem;">
+                    <img src="../../assets/images/avatar.png" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Dr. Sukanta Seal</h5>
+                        <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Georama',sans-serif;">BDS (WBHUS)</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+                <div class="card pc-hide" style="width: 17rem;">
+                    <img src="../../assets/images/IMG-20210808-WA0035 (1).jpg" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Dr. Debarati Deb</h5>
+                        <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Georama',sans-serif;">BDS (WBHUS)</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+                <div class="card pc-hide" style="width: 17rem;">
+                    <img src="../../assets/images/rajasri.PNG" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Dr. Rajarshi Bandyopadhyay</h5>
+                        <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Georama',sans-serif;">BDS (WBHUS)</h6>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
