--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
+<!-- Navbar Start-->
+<div id="#top"></div>
 <section class="menu menu2 cid-sCaOWR0CfJ" once="menu" id="menu2-0">
     <div class="row d-flex justify-content-center bg-orange top-bar p-0 m-0">
         <div class="col-auto d-flex align-items-center p-0">
-            <span class="mobile-hide text-light">Click to view our latest</span>&nbsp;<span><a data-toggle="modal" data-target="#membershipModal" class="underline">Memberships</a>&nbsp;<span class="text-light">and</span>&nbsp;<a data-toggle="modal" data-target="#offerModal" class="underline">Offers</a></span>
+            <span class="mobile-hide text-light">Click to view our latest</span>&nbsp;<span><a (click)="openMember()" class="underline">Memberships</a>&nbsp;<span class="text-light">and</span>&nbsp;<a (click)="openOffer()" class="underline">Offers</a></span>
         </div>
     </div>
     <div class="row d-flex justify-content-end bg-light top-middle-bar p-0 m-0">
         <div class="col-auto d-flex align-items-center p-0">
-            <a class="btn btn-small display-4 mr-0 small-button" href="javascript:void( window.open( 'https://form.jotform.com/211982448397469', 'blank', 'scrollbars=yes, toolbar=no, width=700, height=500' ) ) ">Request Appointment</a>
+            <a class="btn btn-small display-4 mr-0 small-button" href="https://form.jotform.com/212194400583046">Request Appointment</a>
         </div>
         <div class="col-auto text-phone d-flex align-items-center">
             <span><i class="fas fa-phone-alt mr-2"></i><a href="tel:+919674303234" class="deep-orange" style="visibility: visible !important;">+91 9674303234</a></span>
@@ -33,20 +35,35 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown d-flex align-items-center" data-app-modern-menu="true">
                     <li class="nav-item">
-                        <a class="nav-link link text-grey caps display-4" routerLink="/" fragment="about-us">About us</a>
+                        <a class="nav-link link text-grey caps display-4" routerLink="/" fragment="about-us-top">About us</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link link text-grey caps display-4" routerLink="/" fragment="services">
-                            Services</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link link text-grey caps display-4" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" routerLink="/filling" fragment="top">Restoration/ Filling</a>
+                            <a class="dropdown-item" routerLink="/rct" fragment="top">Root Canal Treatment(RCT)</a>
+                            <a class="dropdown-item" routerLink="/scaling" fragment="top">Scaling/Cleaning</a>
+                            <a class="dropdown-item" routerLink="/extraction" fragment="top">Extraction</a>
+                            <a class="dropdown-item" routerLink="/dentures" fragment="top">Dentures</a>
+                            <a class="dropdown-item" routerLink="/crown" fragment="top">Crown and Bridge</a>
+                            <a class="dropdown-item" routerLink="/implant" fragment="top">Implant Dentistry</a>
+                            <a class="dropdown-item" routerLink="/ortho" fragment="top">Orthodontic Treatment</a>
+                            <a class="dropdown-item" routerLink="/cosmo" fragment="top">Cosmetic Dentistry</a>
+                            <a class="dropdown-item" routerLink="/peado" fragment="top">Pediatric Dentistry</a>
+                        </div>
+                    </li>
                     <li class="nav-item"><a class="nav-link link text-grey caps display-4" routerLink="/" fragment="form2-g">Contact Us</a></li>
                     <li class="nav-item mb-2">
-                        <a class="btn btn-small display-4 mr-0" href="javascript:void( window.open( 'https://form.jotform.com/211982448397469', 'blank', 'scrollbars=yes, toolbar=no, width=700, height=500' ) ) ">Request Appointment</a>
+                        <a class="btn btn-small display-4 mr-0" href="https://form.jotform.com/212194400583046">Request Appointment</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 </section>
-<router-outlet></router-outlet>
+<!-- Navbar End-->
+<router-outlet (activate)="onActivate($event)"></router-outlet>
+<!-- Footer Start-->
 <section class="footer6 cid-sDpCKlrKiV" once="footers" id="footer6-6">
     <div class="container">
         <div class="row content mbr-white">
@@ -145,9 +162,9 @@
 </section>
 <!-- Footer End-->
 <!--Cookie Data and Scroll to top-->
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#000000' data-cookie-colorBg='rgba(182, 242, 251, 0.62)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#000000' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
+<!--input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#000000' data-cookie-colorBg='rgba(182, 242, 251, 0.62)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#000000' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
 <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-<input name="animation" type="hidden">
+<input name="animation" type="hidden"-->
 <!--Membership modal start-->
 <div class="modal fade" id="appmembershipModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -163,7 +180,7 @@
                 <img src="../../assets/images/membership.JPG" alt="" class="image image-responsive" style="visibility: visible;">
             </div>
             <div class="row d-flex justify-content-center">
-                <a class="btn btn-danger display-4 button-style" href="https://forms.gle/hDPpK1TQK9jSnk7B6" target="_blank">Register Now</a>
+                <a class="btn btn-danger display-4 button-style" href="https://forms.gle/hDPpK1TQK9jSnk7B6">Register Now</a>
             </div>
         </div>
       </div>
@@ -193,6 +210,9 @@
                     <div class="col-12 col-md-3 col-lg-4 my-1 image-holder">
                         <img src="../../assets/images/offer-3.JPG" alt="" class="image image-responsive" style="visibility: visible;">
                     </div>
+                </div>
+                <div class="row d-flex justify-content-center">
+                    <a class="btn btn-danger display-4 button-style" href="https://forms.gle/9C1y7tQ9QoKfbxSW7">Avail Now</a>
                 </div>
             </div>
         </div>
