--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Merienda:wght@700&family=Rye&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Georama&display=swap');
 html,body {
     margin: 0px !important;
     overflow-x: hidden !important;
@@ -12,11 +13,15 @@ html,body {
     margin-bottom: 0px;
  }
 #content6-1{
-   margin-top: 80px !important;
+   margin-top: 120px !important;
 }
 .deep-orange{
    color : #f66840 !important;
 }
 .deep-orange:hover{
    text-decoration: underline;
+}
+.top{
+   height: 50px;
+   background-color: aliceblue;
 }
