--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -357,7 +357,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Membership Plans</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Membership Plan</h5>
           <button type="button" class="close" (click)="closeMember()" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
